--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\dell\\miniconda3\\envs\\tf_cpu\\Lib\\site-packages\\keras\\src\\losses.py:2940: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\dell\\miniconda3\\envs\\tf_cpu\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
@@ -27,7 +27,7 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.layers import TextVectorization\n",
     "from tensorflow.keras.metrics import Precision, Recall\n",
-    "#import gradio as gr                                     \n",
+    "import gradio as gr                                     \n",
     "from Constants import *"
    ]
   },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "[8529 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "Index(['PhraseId', 'SentenceId', 'Phrase', 'Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -498,8 +498,8 @@
      "output_type": "stream",
      "text": [
       "the\n",
-      "down\n",
-      "soft\n"
+      "seen\n",
+      "british\n"
      ]
     }
    ],
@@ -511,23 +511,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(8529, 2000), dtype=int64, numpy=\n",
-       "array([[  3, 273,   5, ...,   0,   0,   0],\n",
-       "       [ 14, 754,   1, ...,   0,   0,   0],\n",
-       "       [ 51, 247,   5, ...,   0,   0,   0],\n",
+       "array([[   3,  309,    5, ...,    0,    0,    0],\n",
+       "       [  17,  610, 4912, ...,    0,    0,    0],\n",
+       "       [  61,  286,    5, ...,    0,    0,    0],\n",
        "       ...,\n",
-       "       [ 50, 438,  48, ...,   0,   0,   0],\n",
-       "       [  2,  19,   8, ...,   0,   0,   0],\n",
-       "       [  2,  15,   9, ...,   0,   0,   0]], dtype=int64)>"
+       "       [  44,  439,   43, ...,    0,    0,    0],\n",
+       "       [   2,   18,    8, ...,    0,    0,    0],\n",
+       "       [   2,   14,    7, ...,    0,    0,    0]], dtype=int64)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,22 +549,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_set = dataset.take(int(len(dataset) * 0.7))\n",
     "val_set = dataset.skip(int(len(dataset) * 0.7)).take(int(len(dataset) * 0.2))\n",
     "test_set = dataset.skip(int(len(dataset) * 0.9)).take(int(len(dataset) * 0.1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_set2 = test_dataset.take(int(len(test_dataset) * 0.8))"
    ]
   },
   {
@@ -801,10 +792,10 @@
     }
    ],
    "source": [
-    "plt.plot(accuracy, label = \"Training Loss\")\n",
-    "plt.plot(val_accuracy, label = \"Validation Loss\")\n",
+    "plt.plot(accuracy, label = \"Training Accuracy\")\n",
+    "plt.plot(val_accuracy, label = \"Validation Accuracy\")\n",
     "plt.legend(loc = 'upper left')\n",
-    "plt.title(\"Training and Validation Loss\")\n",
+    "plt.title(\"Training and Validation Accuracy\")\n",
     "plt.show()"
    ]
   },
@@ -843,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,36 +852,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 1s/step\n"
+      "1/1 [==============================] - 0s 153ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[5.5675875e-05, 3.6922812e-03, 9.9554551e-01, 6.8400195e-04,\n",
-       "        2.2501334e-05]], dtype=float32)"
+       "array([[1.7468819e-04, 9.9443251e-01, 5.3047021e-03, 8.7931607e-05,\n",
+       "        1.8907659e-07]], dtype=float32)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result = model.predict(np.expand_dims(sample_text, 0))\n",
-    "result"
+    "result#.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +890,7 @@
        "Index(['Sentiment'], dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,28 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 's' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\dell\\Moon\\Sentiment analysis-Movie reviews\\models\\main - Copy.ipynb Cell 39\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/dell/Moon/Sentiment%20analysis-Movie%20reviews/models/main%20-%20Copy.ipynb#X53sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m s\n",
-      "\u001b[1;31mNameError\u001b[0m: name 's' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,14 +911,14 @@
     "    \n",
     "    text = ''\n",
     "    for idx, col in enumerate(train.columns[3:]):\n",
-    "        text += \"{}: {}\\n\".format(col, result[0][idx] > 0.5)\n",
+    "        text += \"{} : {}\\n\".format(col, result[0][idx] > 0.5)\n",
     "        \n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,9 +931,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7861\n",
+      "\n",
+      "Could not create share link. Please check your internet connection or our status page: https://status.gradio.app.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 140ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "interface.launch(share = True)"
    ]
@@ -974,7 +981,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try find code on how to run prediction on array of comments"
+    "# Try find code on how to run prediction on array of comments\n",
+    "# find a way to create a dataframe for just the target sentiments with 1 for true targets and zero for false targets"
    ]
   },
   {
