--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -881,27 +881,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expand_sentiments(data):\n",
+    "    expanded_data = pd.DataFrame()\n",
+    "\n",
+    "    for sentiment_value in range(5):\n",
+    "        sentiment_label = \"Negative\" if sentiment_value == 0 else \"Somewhat Negative\" if sentiment_value == 1 else \"Neutral\" if sentiment_value == 2 else \"Somewhat Positive\" if sentiment_value == 3 else \"Positive\"\n",
+    "        sentiment_column_name = f\"{sentiment_label}\"\n",
+    "        expanded_data[sentiment_column_name] = (train['Sentiment'] == sentiment_value).astype(int)\n",
+    "\n",
+    "    return expanded_data\n",
+    "\n",
+    "# Expand the encoded values\n",
+    "expanded_data = expand_sentiments(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Negative</th>\n",
+       "      <th>Somewhat Negative</th>\n",
+       "      <th>Neutral</th>\n",
+       "      <th>Somewhat Positive</th>\n",
+       "      <th>Positive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Sentiment'], dtype='object')"
+       "     Negative  Somewhat Negative  Neutral  Somewhat Positive  Positive\n",
+       "0           0                  1        0                  0         0\n",
+       "63          0                  0        0                  0         1\n",
+       "81          0                  1        0                  0         0\n",
+       "116         0                  0        0                  1         0\n",
+       "156         0                  1        0                  0         0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.columns[3:]"
+    "#Sentiment_df = dtrain.copy()\n",
+    "#Sentiment_df = Sentiment_df.join(expanded_data)\n",
+    "Sentiment_df = expanded_data\n",
+    "Sentiment_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Negative', 'Somewhat Negative', 'Neutral', 'Somewhat Positive',\n",
+       "       'Positive'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sentiment_df.columns[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +1031,7 @@
     "    result = model.predict(vectorised_comment)\n",
     "    \n",
     "    text = ''\n",
-    "    for idx, col in enumerate(train.columns[3:]):\n",
+    "    for idx, col in enumerate(Sentiment_df.columns[:5]):\n",
     "        text += \"{} : {}\\n\".format(col, result[0][idx] > 0.5)\n",
     "        \n",
     "    return text"
@@ -918,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,14 +1052,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7861\n",
+      "Running on local URL:  http://127.0.0.1:7868\n",
       "\n",
       "Could not create share link. Please check your internet connection or our status page: https://status.gradio.app.\n"
      ]
@@ -946,7 +1067,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7868/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -959,7 +1080,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 33,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -967,7 +1088,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 140ms/step\n"
+      "1/1 [==============================] - 0s 227ms/step\n",
+      "1/1 [==============================] - 0s 149ms/step\n",
+      "1/1 [==============================] - 0s 138ms/step\n",
+      "1/1 [==============================] - 0s 141ms/step\n",
+      "1/1 [==============================] - 0s 135ms/step\n"
      ]
     }
    ],
